subprojects {
    apply plugin: 'scala'
    sourceCompatibility = 1.6
    targetCompatibility = 1.6
    test {
        maxHeapSize = '1024m'
        jvmArgs = ["-XX:MaxPermSize=512m"]
    }

    repositories {
        mavenCentral()
        mavenRepo url: "http://repo.springsource.org/release"
        mavenRepo url: "http://repo.springsource.org/milestone"
        mavenRepo url: "http://repo.springsource.org/snapshot"
    }

}